Alle Änderungen hochgeladen

--- a/index.html
+++ b/index.html
@@ -101,11 +101,8 @@
       <section id="work">
         <div class="wrapper_inner">
           <div class="text_center">
-            <h4 class="h5">
-              Hier sind meine Projekte in Webprogrammierung 
-            </h4>
-            <p>---Dieser Bereich
-                wird regelmäßig erweitert---</p>
+            <h4 class="h5">Hier sind meine Projekte in Webprogrammierung</h4>
+            <p>---Dieser Bereich wird regelmäßig erweitert---</p>
             <ul role="list" class="work_logos flex flex_center">
               <li>
                 <a href="https://nschwenzer.github.io/future-day-website/"
